Fixes reference comparison issues with primitives
Since there is no guarantee that boxed primitives will be identical,
lets use the .equals method.